--- a/index.html
+++ b/index.html
@@ -5405,7 +5405,7 @@ function renderOnboardingTela1() {
         <div class="onboarding-content-wrapper" style="text-align: center;">
             <img src="https://i.postimg.cc/KYbBp2VR/image-removebg-preview.png" alt="Logo VersãoPro" style="width: 150px; height: 150px; margin-bottom: 20px;">
             <h2 style="color: var(--cor-destaque-ouro);">Bem-vindo(a) ao VersãoPro!</h2>
-            <p style="color: var(--cor-destaque-ouro);">O seu novo ecossistema de beleza e bem-estar.</p>
+            <p style="color: var(--cor-destaque-ouro);">seu ecossistema de beleza e bem-estar.</p>
             <button onclick="renderOnboardingTela2()">Próximo</button>
         </div>
     `;
