--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="icon" href="/icone.png" type="image/png">
   <link rel="apple-touch-icon" href="/icone.png">
-  <link href="[https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap](https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap)" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -2052,7 +2052,6 @@ const WHATSAPP_ADM_PHONE = "5527995003737";
 const PRECO_VIP = 100;
 const PRECO_TURBINAR = 9.99;
 // SUBSTITUA AS CONSTANTES DE PREÇO POR ESTAS
-const PRECO_VIP = 100;
 const PRECO_TURBINAR = 9.99;
 const PRECOS_PRO = { // Nossos 3 novos níveis
     tier1: { preco: 29.90, taxa: 0.04 }, // 4%
